Table quiz_topic {
  topic_id integer [pk]
  name varchar [unique]
}

Table quiz_questions {
  question_id integer [pk]
  topic_name text
  question text
}

Table quiz_answers {
  answer_id integer [pk]
  question_id integer
  answer text
  correct bool
}



Ref: quiz_questions.question_id > quiz_answers.question_id
Ref: quiz_topic.name > quiz_questions.topic_name
